Salesforce/objects/agf__ADM_Board_User_Preferences__c.object
<CustomObject>
    <fields>
        <fullName>agf__Board_Type__c</fullName>
        <label>Board Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Kanban</fullName>
                </value>
                <value>
                    <fullName>Sprint</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Filters__c</fullName>
        <label>Filters</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__Team__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Team</label>
        <referenceTo>agf__ADM_Scrum_Team__c</referenceTo>
        <relationshipLabel>Board User Preferences</relationshipLabel>
        <relationshipName>Board_User_Preferences</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__User_Filter__c</fullName>
        <label>User Filter</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Board_User_Preferences</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Board User Preferences</label>
    <nameField>
        <displayFormat>BUP-{000000}</displayFormat>
        <label>Board User Preferences Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Board User Preferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>